--- a/style.css
+++ b/style.css
@@ -77,7 +77,16 @@ ul .information{
 @media only screen and (max-width:425px) {
     .footer{
         width: 360px;
-        /* position: sticky; */
+        margin-bottom: 23px;
+
+    }
+    .headind-left{
+        width: 300px;
+    }
+}
+@media only screen and (max-width:375px) {
+    .footer{
+        width: 300px;
         margin-bottom: 23px;
 
     }
